--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,8 @@ android {
         applicationId "com.aaratechnologies.lawtrend"
         minSdkVersion 22
         targetSdkVersion 30
-        versionCode 8
-        versionName "1.7"
+        versionCode 9
+        versionName "1.8"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -69,7 +69,7 @@ dependencies {
 //    annotationProcessor 'com.borjabravo:readmoretextview:2.1.0'
 //    implementation 'com.github.devendroid:ReadMoreOption:1.0.2'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'org.jsoup:jsoup:1.10.2'
+//    implementation 'org.jsoup:jsoup:1.10.2'
     implementation 'com.google.android.play:core:1.8.0'
 
 }
