--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".menuwiseactivities.SearchActivityForBareAct" android:theme="@style/AppTheme2"></activity>
-        <activity android:name=".activities.NotificationShowActivity" />
-        <!-- [START fcm_default_icon] -->
+        <activity android:name=".menuwiseactivities.SearchNewsActivity" android:theme="@style/AppTheme2"></activity>
+        <activity
+            android:name=".menuwiseactivities.SearchActivityForBareAct"
+            android:theme="@style/AppTheme2" />
+        <activity android:name=".activities.NotificationShowActivity" /> <!-- [START fcm_default_icon] -->
         <!--
  Set custom default icon. This is used when no icon is set for incoming notification messages.
              See README(https://goo.gl/l4GJaQ) for more.
